--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["06:7c:db:71:49:2f:03:36:60:08:d2:fd:33:6f:17:d3"] # You can get this ID in the section where you registered the SSH Key
+          fingerprints: ["89:d7:17:bd:7f:c4:84:f3:72:d1:6b:61:a5:51:02:88"] # You can get this ID in the section where you registered the SSH Key
       - run:
           name: Install dependencies
           command: |
