--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,27 @@ jobs:
           command: |
             ansible-playbook -i inventory.txt playbook.yml
 
+  smoke_test:
+      docker:
+        - image: alpine:latest
+      steps:
+        - run: apk add --update curl
+        - run:
+            name: smoke test
+            command: |
+              URL="https://blog.jslscom/"
+              if curl -s --head ${URL} # test if blog.udacity. com exists
+              then
+                echo "{{URL}} exists"
+                return 0 
+              else
+                echo "{{URL}} does not exist"              
+                return 1
+              fi
 workflows:
   my_workflow:
     jobs:
       - configure_infrastructure
+      - smoke_test:
+          requires:
+            - configure_infrastructure
